--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.4.0",
+    "@ant-design/icons": "4.2.1",
     "@next/bundle-analyzer": "^9.1.4",
     "antd": "^4.11.2",
+    "cross-env": "^7.0.2",
+    "esm": "^3.2.25",
     "next": "10.0.6",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
@@ -19,5 +22,8 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "typescript": "^4.1.3"
+  },
+  "resolutions": {
+    "@ant-design/colors": "5.0.0"
   }
 }
